# RetailOps-Data-AI-Platform

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  FINALIZATION_NOTES.md  Makefile  README.md  error_logging.py  pyproject.toml  requirements-all.txt
compose/: README.md  compose.advanced_serving.yaml  compose.analytics.yaml  compose.cdc.yaml  compose.connector_adobe_commerce.yaml  compose.connector_bigcommerce.yaml  compose.connector_csv.yaml  compose.connector_db.yaml  compose.connector_prestashop.yaml  compose.connector_shopify.yaml  compose.connector_woocommerce.yaml  compose.connectors.yaml  compose.core.yaml  compose.feature_store.yaml  compose.lakehouse.yaml  compose.metadata.yaml  compose.ml.yaml  compose.monitoring.yaml  compose.query.yaml  compose.streaming.yaml
config/: README.md  __init__.py  settings.py
config/samples/: lite.env  pro.env  standard.env
core/: README.md  __init__.py
core/ai/: README.md  __init__.py
core/api/: Dockerfile  README.md  __init__.py  main.py
core/ingestion/: README.md  __init__.py
core/monitoring/: Dockerfile  README.md  __init__.py  main.py  schemas.py  service.py
core/serving/: README.md  __init__.py  schemas.py  service.py
core/setup/: README.md  __init__.py  service.py
data/: README.md
docs/: .env.example  .pre-commit-config.yaml  Makefile  README.md  additional_connectors_and_modules.md  architecture_overview.md  canonical_data_model.md  dashboard_admin_runbook.md  dashboard_admin_separation.md  dashboard_enterprise_runbook.md  dashboard_workspace_completion_report.md  feature_platform_phase9.md  final_business_expansion_phase23.md  final_business_expansion_phase24.md  final_double_check_report.md  final_package_completion_audit.md  final_source_manifest.txt  forecasting_phase10.md  further_business_modules.md  ml_registry_phase15.md  module_boundaries.md  monitoring_phase17.md  personas.md  phase_1_to_10_audit.md  phase_1_to_11_audit.md  phase_1_to_12_audit.md  phase_1_to_13_audit.md  phase_1_to_14_audit.md  phase_1_to_15_audit.md  phase_1_to_16_audit.md  phase_1_to_17_audit.md  phase_1_to_17_gap_report.md  phase_1_to_18_audit.md  phase_1_to_18_gap_report.md  phase_1_to_19_audit.md  phase_1_to_19_gap_report.md  phase_1_to_20_audit.md  phase_1_to_20_gap_report.md  phase_1_to_8_audit.md  phase_1_to_9_audit.md  (+14 more)
docs/architecture/: modular-solution-architecture.drawio  phase-1-solution-architecture.drawio  platform_overview.md  system_layers.md
docs/business/: business_review_reporting.md  commercial_reporting.md  customer_and_inventory_intelligence.md  decision_intelligence_reporting.md  executive_scorecards.md  governance_reporting.md  portfolio_reporting.md  risk_and_retention_intelligence.md  working_capital_reporting.md
docs/compose/: compose.core.yaml  compose.monitoring.yaml
docs/history/: modularization_completion_report.md  modularization_transition.md  platform_extensions_audit.md  platform_extensions_gap_report.md  release_packaging_audit.md  release_packaging_gap_report.md  repository_file_inventory.tsv  repository_text_and_structure_audit.md
docs/modules/: feature_platform.md  forecasting_module.md  ml_registry_and_lifecycle.md  module_catalog.md  reorder_engine_module.md  returns_intelligence_module.md  shipment_risk_module.md  stockout_intelligence_module.md
docs/operations/: release_and_operations.md
docs/platform/: model_serving_layer.md  monitoring_and_governance.md  platform_extensions.md  platform_extensions_runbook.md  platform_setup_wizard.md  pro_data_platform.md
docs/quickstart/: lite.md  pro.md  standard.md
modules/: README.md  __init__.py
scripts/: README.md  backup.sh  check_python_imports.py  common.sh  generate_dashboard_workspace.py  generate_pro_platform_bundle.py  health.sh  install.sh  load_demo_data.sh  restore.sh  upgrade.sh  validate_compose_profiles.py
tests/: README.md  conftest.py
(+481 files in other folders)
