[project]
name = "retailops-data-ai-platform"
version = "0.1.0"
description = "A modular self-hosted retail data and AI platform for data ingestion, analytics, forecasting, monitoring, and operational decision support."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.115,<1.0",
    "httpx>=0.28.1",
    "pandas>=3.0.1",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.48",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.30,<1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4,<5",
    "ruff>=0.11,<0.12",
    "mypy>=1.11,<2",
    "pytest>=8.3,<9",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]
