[project]
name = "retailops-data-ai-platform"
version = "0.1.0"
description = "A modular self-hosted retail data and AI platform for data ingestion, analytics, forecasting, monitoring, and operational decision support."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.2,<4.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "python-multipart>=0.0.12",
    "PyYAML>=6.0,<7.0",
    "tenacity>=8.2,<9.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
reporting = [
    "pypdf>=5,<6",
    "reportlab>=4,<5",
]
feature-store = [
    "feast>=0.40,<1.0",
]
advanced-serving = [
    "bentoml>=1.3,<2.0",
]
all-optional = [
    "pypdf>=5,<6",
    "reportlab>=4,<5",
    "feast>=0.40,<1.0",
    "bentoml>=1.3,<2.0",
]

[dependency-groups]
dev = [
    "dbt-core>=1.11.7",
    "dbt-postgres>=1.10.0",
    "mypy>=1.11,<2",
    "pre-commit>=4,<5",
    "pytest>=8.3,<9",
    "ruff>=0.6,<1",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
