[project]
name = "retailops-data-ai-platform"
version = "0.1.0"
description = "A modular self-hosted retail data and AI platform for data ingestion, analytics, forecasting, monitoring, and operational decision support."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4,<5",
    "ruff>=0.11,<0.12",
    "mypy>=1.11,<2",
    "pytest>=8.3,<9",
]

[tool.uv.workspace]
members = ["packages/*"]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"